Applied CSS Horizontal Scroll to Linsenpate Typography

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -254,7 +253,7 @@
 
 	<!-- Footer  -->
 	<footer>
-		<section id="contact"><!--Open Contact-->
+		<section id="contact" class="contact"><!--Open Contact-->
 				<h3>Did you like my work?</h3>
 				<div class="contact-button-wrapper">
 					<a class="button button-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
