--- a/shore.html
+++ b/shore.html
@@ -236,31 +236,8 @@
                 This analysis included competitors’ profile, marketing, and business strategy, SWOT Profile, UX/UI, content, design, and
                 performance quality. Based on the analysis, I drew up several core features that defined Shore’s MVP.</p>
             </div>
-            <div class="slides-wrapper">
-                <div class="slideshow-container">
-                    <div class="mySlides"><img src="img/shore/comp-analysis_1.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_2.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_3.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_4.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_5.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_6.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <div class="mySlides"><img src="img/shore/comp-analysis_7.png" alt="Shore Design by Júlia Marí Bernaus"></div>
-                    <!-- Next and previous buttons -->
-                    <div class="slide-nav">
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                    </div>
-                </div>
-            </div>
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-                <span class="dot" onclick="currentSlide(4)"></span>
-                <span class="dot" onclick="currentSlide(5)"></span>
-                <span class="dot" onclick="currentSlide(6)"></span>
-                <span class="dot" onclick="currentSlide(7)"></span>
+            <div class="competitors">
+                <img src="img/shore/competitive_analysis.png" alt="Shore Design by Júlia Marí Bernaus">
             </div>
         </section>
         <div class="sumup">
