--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
 		<!--End Imprint-->
 	</footer>
 	<!--end of footer-->
-<script src="js/scripts.js"></script>
+
+	<!--Scripts-->
+	<script src="js/scripts.js"></script>
+	<script src="js/jquery-3.6.0.min.js></script>
 </body>
 </html>
