Added JQuery library

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- Header/Navigation -->
 	<header>
 		<div id="main-nav">
-			<div class="brackets">
+			<div>
 				<a class="logo" href="index.html">Júlia Mari Bernaus</a>
 			</div>
 			<nav>
@@ -159,7 +159,7 @@
 				Development.
 				<br>
 				<br>
-				I am currently working as a UX Design tutor at <a href="https://careerfoundry.com/" target="_blank">CareerFoundry</a> and freelancing for companies such as <a href="https://www.misterspex.de/" target="_blank">Mister Spex</a>,
+				I am currently working as a UX Design tutor at <a href="https://careerfoundry.com/" target="_blank" class="cool-link">CareerFoundry</a> and freelancing for companies such as <a href="https://www.misterspex.de/" target="_blank">Mister Spex</a>,
 				<a href="https://www.settinghq.com/" target="_blank">Setting</a>, <a href="https://duxer.co.uk/">Duxer</a> (Ikea, Userzoom), and creating a product from scratch with KEA. On the side, I organize
 				<a href="http://designandfriends.com/" target="_blank">Design+Friends</a>, a monthly Berlin Designer meetup.<span id="dots">..</span>
 				<br>
@@ -278,7 +278,8 @@
 	<!--end of footer-->
 
 	<!--Scripts-->
+	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+	crossorigin="anonymous"></script>	
 	<script src="js/scripts.js"></script>
-	<script src="js/jquery-3.6.0.min.js></script>
 </body>
 </html>
