--- a/artconnect.html
+++ b/artconnect.html
@@ -83,7 +83,10 @@
         <!--End Imprint-->
     </footer>
     <!--end of footer-->
+
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
