--- a/setting.html
+++ b/setting.html
@@ -246,8 +246,11 @@
             </a>
         </div>
         <!--End Imprint-->
-    </footer>
-        <!--end of footer-->
-        <script src="js/scripts.js"></script>
+    </footer><!--end of footer-->
+
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+        crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
     </body>
 </html>
