Usability Test Improvements

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -31,8 +31,8 @@
 <body>
     <!-- Header/Navigation -->
     <header>
-        <div id="main-nav">
-            <div class="brackets">
+        <div id="navbar">
+            <div>
                 <a class="logo" href="index.html">Júlia Mari Bernaus</a>
             </div>
             <nav>
@@ -40,9 +40,6 @@
                     <div class="brackets">
                         <a class="top-nav" href="index.html#work">Work</a>
                         <a class="top-nav" href="index.html#about">About</a>
-                        <a class="top-nav" href="index.html#contact">Contact</a>
-                        <a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
-                            target="_blank">LinkedIn</a>
                     </div>
                     <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
                         role="button">Get in touch</a>
