--- a/setting.html
+++ b/setting.html
@@ -7,20 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
     <link href="img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | UX/UI Designer | Berlin</title>
+    <title>Júlia Marí Bernaus | Animation</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
-        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- Custom styles for this template go here -->
-    <link rel="stylesheet" href="css/normalize.css#">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/styles_st.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
-            rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
+        rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,21 +31,18 @@
 <body>
     <!-- Header/Navigation -->
     <header>
-        <div id="main-nav">
-            <div class="brackets">
+        <div id="navbar">
+            <div>
                 <a class="logo" href="index.html">Júlia Mari Bernaus</a>
             </div>
             <nav>
                 <div class="nav">
                     <div class="brackets">
-                        <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-                        <a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
-                            target="_blank">LinkedIn</a>
+                        <a class="top-nav" href="index.html#work">Work</a>
+                        <a class="top-nav" href="index.html#about">About</a>
                     </div>
                     <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                        role="button">Get in touch</a>                   
+                        role="button">Get in touch</a>
                 </div>
             </nav>
         </div>
