--- a/artconnect.html
+++ b/artconnect.html
@@ -33,18 +33,15 @@
 <body>
     <!-- Header/Navigation -->
     <header>
-        <div id="main-nav">
-            <div class="brackets">
+        <div id="navbar">
+            <div>
                 <a class="logo" href="index.html">Júlia Mari Bernaus</a>
             </div>
             <nav>
                 <div class="nav">
                     <div class="brackets">
-                        <a class="top-nav d-none d-md-block" href="index.html#work">Work</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#about">About</a>
-                        <a class="top-nav d-none d-md-block" href="index.html#contact">Contact</a>
-                        <a class="top-nav d-none d-md-block " href="https://www.linkedin.com/in/juliamaribernaus/"
-                            target="_blank">LinkedIn</a>
+                        <a class="top-nav" href="index.html#work">Work</a>
+                        <a class="top-nav" href="index.html#about">About</a>
                     </div>
                     <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
                         role="button">Get in touch</a>
