Updated Images in Home and Nav Bar in all pages

--- a/artconnect.html
+++ b/artconnect.html
@@ -43,8 +43,7 @@
                         <a class="top-nav" href="index.html#work">Work</a>
                         <a class="top-nav" href="index.html#about">About</a>
                     </div>
-                    <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                        role="button">Get in touch</a>
+                    <a class="button-nav button-outline-secondary" href="index.html#contact" role="button">Get in touch</a>
                 </div>
             </nav>
         </div>
