--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<a href="linsenpate.html">
 						<picture>
 							<source srcset="img/home/linsenpate_328x246.png" media="(max-width:767px)">
-							<img src="img/home/linsenpate_800x600.png" alt="Linsenpate" class="round-borders">
+							<img src="img/home/linsenpate_800x600.jpg" alt="Linsenpate" class="round-borders">
 						</picture>
 					</a>
 					</div>
@@ -100,7 +100,7 @@
 					<a href="setting.html">
 						<picture>
 							<source srcset="img/home/setting_328x246.png" media="(max-width:767px)">
-							<img src="img/home/setting_800x600.png" alt="Setting" class="round-borders">
+							<img src="img/home/setting_800x600.jpg" alt="Setting" class="round-borders">
 						</picture>
 					</a>
 					</div>
@@ -121,7 +121,7 @@
 					<div class="image white-background">
 						<picture>
 							<source srcset="img/home/shore_328x246.png" media="(max-width:767px)">
-							<img src="img/home/shore_800x600.png" alt="Shore" class="image__img round-borders">
+							<img src="img/home/shore_800x600.jpg" alt="Shore" class="image__img round-borders">
 						</picture>
 						<!-- <div class="image__overlay image__overlay--blur">
 							<div class="image__title">
@@ -168,8 +168,8 @@
 				<div class="project"> <!--Open Project 5-->
 					<div class="image white-background">
 						<picture>
-							<source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
-							<img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img round-borders">
+							<source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
+							<img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
 						</picture>
 						<div class="image__overlay image__overlay--blur">
 							<div class="image__title">
@@ -179,21 +179,21 @@
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Responsive website for Designers Community</h3>
-							<!--<a href="artconnect.html"></a>-->
-							<p>Design+Friends is a Berliner Designers community with monthly meetups.</p>
+							<h3>Designer community bootstrap responsive site</h3>
+							<!--<a href="df.html"></a>-->
+							<p>Design+Friends is a Berliner designer community with monthly meetups.</p>
 						</div>
 						<div class="project-label">
 							<p class="label-big">2021</p>
 							<p class="label-role">Co-founder, UX/UI Designer, Front-End Developer</p>
 						</div>
-					</div><!--end Project Content 4-->
-				</div><!--end Project 4-->
+					</div><!--end Project Content 5-->
+				</div><!--end Project 5-->
 				<div class="project"><!--Open Project 6-->
 					<div class="image white-background">
 						<picture>
-							<source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
-							<img src="img/home/artconnect_800x600.png" alt="Design+Friends" class="image__img round-borders">
+							<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+							<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
 						</picture>
 						<div class="image__overlay image__overlay--blur">
 							<div class="image__title">
@@ -204,7 +204,7 @@
 					<div class="project-content">
 						<div class="project-title">
 							<h3>Responsive portfolio with CSS, html & Javascript</h3>
-							<!--<a href="artconnect.html"></a>-->
+							<!--<a href="jmb.html"></a>-->
 							<p>Professional portfolio to showcase design and front-end development skills.</p>
 						</div>
 						<div class="project-label">
