--- a/linsenpate.html
+++ b/linsenpate.html
@@ -41,14 +41,12 @@
                         <a class="top-nav" href="index.html#work">Work</a>
                         <a class="top-nav" href="index.html#about">About</a>
                     </div>
-                    <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                        role="button">Get in touch</a>
+                    <a class="button-nav button-outline-secondary" href="index.html#contact" role="button">Get in touch</a>
                 </div>
             </nav>
         </div>
         <!--end header-->
     </header>
-
     <!-- Hero -->
     <main>
         <section id="lp-intro" class="lp-intro-flex-grid container"><!--Open Intro--> 
