--- a/setting.html
+++ b/setting.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template go here -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles_st.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300;700&display=swap"
         rel="stylesheet">
@@ -41,8 +42,7 @@
                         <a class="top-nav" href="index.html#work">Work</a>
                         <a class="top-nav" href="index.html#about">About</a>
                     </div>
-                    <a class="button-nav button-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
-                        role="button">Get in touch</a>
+                    <a class="button-nav button-outline-secondary" href="index.html#contact" role="button">Get in touch</a>
                 </div>
             </nav>
         </div>
