--- a/linsenpate.html
+++ b/linsenpate.html
@@ -495,6 +495,9 @@
             </div>
         </section>
         </section>
+        <div id="top-button">
+            <a class="top-button" href="#lp-intro">Back to top</a>
+        </div>
     </main>
 
     <!-- Footer  -->
