fixed Linsenpate's Typography layout

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -145,7 +145,7 @@
                     <p>To redesign linsenpate.de while:</p>
                     <ul>
                         <li><p>Keeping the brand and website feeling</p></li>
-                        <li><p>Using the website structure of <a class="lp-text" href="https://lensit.de" target="_blank">lensit.no</a></p></li>
+                        <li><p>Using the website structure of <a href="https://lensit.de" target="_blank">lensit.no</a></p></li>
                         <li><p>Adapting the website structure to the german market</p></li>
                         <li><p>Adapting the check-out-flow to shopify</p></li>
                         <li><p>Merging German with Italian, to keep the story behind the brand</p></li>
@@ -156,7 +156,7 @@
                 <!--Open Right Column-->
                 <h3>The Process</h3>
                 <p>After a short introduction by the Product of Ecommerce at MisterSpex, I began exploring the existing website,
-                <a class="lp-text" href="https://linsenpate.de" target="_blank">linsenpate.de</a>, and the IA reference website, <a class="lp-text" href="https://lensit.de" target="_blank">lensit.no</a>. A few days after I was given access to the design material of
+                <a href="https://linsenpate.de" target="_blank">linsenpate.de</a>, and the IA reference website, <a href="https://lensit.de" target="_blank">lensit.no</a>. A few days after I was given access to the design material of
                 Lensit and I learned about the design patterns used.</p>
                 
                 <p>Since I had such a good reference, I only needed to apply an aesthetic UI to the structure provided. With a mobile-first
@@ -172,7 +172,7 @@
                 which had already been extensively tested and optimized, I applied the new UI to them. I also used my language skills to
                 emphasize the brand, by introducing Italian words in a way that could be understood by Germans.</p>
                 
-                <p>Finally, I proceeded to put together a design system and a components page for <a class="lp-text" href="https://www.misterspex.de/" target="_blank">Mister Spex’s</a> designers to use as a
+                <p>Finally, I proceeded to put together a design system and a components page for <a href="https://www.misterspex.de/" target="_blank">Mister Spex’s</a> designers to use as a
                 reference in the future.</p>
             </div>
             <!--End of Right Column-->
@@ -474,7 +474,8 @@
                                 line-height: 18px<br>
                                 letter-spacing: 0.3px</p>
                         </div>                
-                    </section><!--End Label-->
+                    </section>
+                    </div><!--End Label-->
                 <!--End Typography-->
                 <section id="design-system2">
                 <div class="container icons" >
