Debugged CSS and HTML files

--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
 		<div id="hero" class="container">
 			<!--Open row that holds 2 columns-->
 			<div class="hero-pic pic-animation"><!--Open Column Right -->
-			<picture>
-				<source srcset="img/home/pic.png" media="(max-width:767px)">
 				<a href="#about"><img src="img/home/pic.png" alt="Júlia Marí Bernaus"></a>
-			</picture>
 			</div><!--end pic-->
 			<div class="hero-cta">
 				<!--Open Column Left -->
@@ -123,11 +120,6 @@
 							<source srcset="img/home/shore_328x246.png" media="(max-width:767px)">
 							<img src="img/home/shore_800x600.jpg" alt="Shore" class="image__img round-borders">
 						</picture>
-						<!-- <div class="image__overlay image__overlay--blur">
-							<div class="image__title">
-								<h2>Coming Soon</h2>
-						</div>
-						</div> -->
 					</div>
 					</a>
 					<div class="project-content"><!--open Project Content 3-->
@@ -156,12 +148,12 @@
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Responsive social network for creatives</h3><!--<a href="artconnect.html"></a>-->
+							<h3>Founded and designed social network for creatives</h3><!--<a href="artconnect.html"></a>-->
 							<p>Artconnect is the biggest social network for creatives in Germany, global since 2015.</p>
 						</div>
 						<div class="project-label">
 							<p class="label-big">2011-2020</p>
-							<p class="label-role">Founder, Product Manager, UX/UI Designer</p>
+							<p class="label-role">Founder, CEO, Product Manager, UX/UI Designer</p>
 						</div>
 					</div><!--end Project Content 4-->
 				</div><!--end Project 4-->
