--- a/shore.html
+++ b/shore.html
@@ -737,11 +737,128 @@
                     <li>Stay humble: listen, observe, and change the product to the users’ needs – the product is for them, not for you.</li>
                     <li>Two sets of eyes are better than one – when in doubt, ask your colleagues!</li>
                 </ul>
-                    <div class="space"><a class="button button-primary take-top" role="button" href="#sh-intro">Take me to the top</a></div>
             </div>
         </section>
         <div class="sh-footer">
             <img src="img/shore/footer.png" alt="Shore Design by Júlia Marí Bernaus">
+        </div>
+
+        <section id="related-projects">
+            <div>
+                <h3>Check out more Projects</h3>
+            </div>
+            <div class="related-projects-box">
+                <!--Open Projects Box-->
+                <div class="related-project">
+                    <!--Open Project 1-->
+                    <div class="white-background">
+                        <a href="linsenpate.html">
+                            <picture>
+                                <source srcset="img/home/linsenpate_328x246.png" media="(max-width:767px)">
+                                <img src="img/home/linsenpate_800x600.jpg" alt="Linsenpate" class="round-borders">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="related-project-content">
+                        <!--open Project Content 1-->
+                        <div class="related-project-title">
+                            <h4><a href="linsenpate.html">Contactlenses e-commerce shop responsive redesign</a></h4>
+                        </div>
+                    </div>
+                    <!--end Project Content-->
+                </div>
+                <!--end Project 1-->
+                <div class="related-project">
+                    <!--Open Project 2-->
+                    <div class="white-background">
+                        <a href="setting.html">
+                            <picture>
+                                <source srcset="img/home/setting_328x246.png" media="(max-width:767px)">
+                                <img src="img/home/setting_800x600.jpg" alt="Setting" class="round-borders">
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="related-project-content">
+                        <!--open Project Content 2-->
+                        <div class="related-project-title">
+                            <h4><a href="setting.html">Real-estate marketplace responsive redesign</a></h4>
+                        </div>
+                    </div>
+                    <!--end Project Content 2-->
+                </div>
+                <!--end Project 2-->
+                <div class="related-project">
+                    <!--Open Project 4-->
+                    <div class="image white-background">
+                        <picture>
+                            <source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
+                            <img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img round-borders">
+                        </picture>
+                        <div class="image__overlay image__overlay--blur">
+                            <div class="image__title">
+                                <h2>Coming Soon</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="related-project-content">
+                        <div class="related-project-title">
+                            <h4>Founded and designed social network for creatives</h4>
+                            <!--<a href="artconnect.html"></a>-->
+                        </div>
+                    </div>
+                    <!--end Project Content 4-->
+                </div>
+                <!--end Project 4-->
+                <div class="related-project">
+                    <!--Open Project 5-->
+                    <div class="image white-background">
+                        <picture>
+                            <source srcset="img/home/designfriends_328x246.jpg" media="(max-width:767px)">
+                            <img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
+                        </picture>
+                        <div class="image__overlay image__overlay--blur">
+                            <div class="image__title">
+                                <h2>Coming Soon</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="related-project-content">
+                        <div class="related-project-title">
+                            <h4>Designer community bootstrap responsive site</h4>
+                            <!--<a href="df.html"></a>-->
+                        </div>
+                    </div>
+                    <!--end Project Content 5-->
+                </div>
+                <!--end Project 5-->
+                <div class="related-project">
+                    <!--Open Project 6-->
+                    <div class="image white-background">
+                        <picture>
+                            <source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+                            <img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio"
+                                class="image__img round-borders">
+                        </picture>
+                        <div class="image__overlay image__overlay--blur">
+                            <div class="image__title">
+                                <h2>Coming Soon</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="related-project-content">
+                        <div class="related-project-title">
+                            <h4>Responsive portfolio with CSS, html & Javascript</h4>
+                            <!--<a href="jmb.html"></a>-->
+                        </div>
+                    </div>
+                    <!--end Project Content 6-->
+                </div>
+                <!--end Project 6-->
+            </div>
+        </section>
+
+        <div id="top-button">
+            <a class="top-button" href="#sh-intro">Back to top</a>
         </div>
     </main>
 
