Mobile View improvements

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Responsive portfolio with CSS, html & Javascript</h3>
+							<h3>Responsive portfolio with CSS, HTML & Javascript</h3>
 							<!--<a href="jmb.html"></a>-->
 							<p>Professional portfolio to showcase design and front-end development skills.</p>
 						</div>
