--- a/linsenpate.html
+++ b/linsenpate.html
@@ -547,7 +547,7 @@
                             <img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img round-borders">
                         </picture>
                         <div class="image__overlay image__overlay--blur">
-                            <div class="image__title">
+                            <div class="image__title related-image__title">
                                 <h2>Coming Soon</h2>
                             </div>
                         </div>
@@ -569,7 +569,7 @@
                             <img src="img/home/designfriends_800x600.jpg" alt="Design+Friends" class="image__img round-borders">
                         </picture>
                         <div class="image__overlay image__overlay--blur">
-                            <div class="image__title">
+                            <div class="image__title related-image__title">
                                 <h2>Coming Soon</h2>
                             </div>
                         </div>
@@ -592,14 +592,14 @@
                                 class="image__img round-borders">
                         </picture>
                         <div class="image__overlay image__overlay--blur">
-                            <div class="image__title">
+                            <div class="image__title related-image__title">
                                 <h2>Coming Soon</h2>
                             </div>
                         </div>
                     </div>
                     <div class="related-project-content">
                         <div class="related-project-title">
-                            <h4>Responsive portfolio with CSS, html & Javascript</h4>
+                            <h4>Responsive portfolio with CSS, HTML & Javascript</h4>
                             <!--<a href="jmb.html"></a>-->
                         </div>
                     </div>
