--- a/setting.html
+++ b/setting.html
@@ -323,7 +323,7 @@
                     </div>
                     <div class="related-project-content">
                         <div class="related-project-title">
-                            <h4>Responsive portfolio with CSS, html & Javascript</h4>
+                            <h4>Responsive portfolio with CSS, HTML & Javascript</h4>
                             <!--<a href="jmb.html"></a>-->
                         </div>
                     </div>
