Fixed Horizontal Scrollbar issues in Linsenpate

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -302,11 +302,11 @@
                 </section><!--End Elevations-->
             </div>
             
-                <section class="ds-group"><!--Open Typography-->
-                    <div class="typo-container">
+                <section class="ds-group container"><!--Open Typography-->
+                    <!-- <div class="typo-container"> -->
                     <h3>Typography</h3>
                     <h3 class="h3-typo">Email Headers</h3>
-                    <section class="scrolling-wrapper"><!--Open Email Headers-->
+                    <section class="scrolling-wrapper" id="scroller"><!--Open Email Headers-->
                         <div class="typo">
                             <h4 class="h4-typo">Email H1 | Desktop</h4>
                             <p class="lp-email-h1-desktop">Karla Bold<br>
@@ -475,7 +475,8 @@
                                 letter-spacing: 0.3px</p>
                         </div>                
                     </section>
-                    </div><!--End Label-->
+                    <!-- </div> -->
+                    <!--End Label-->
                 <!--End Typography-->
                 <section id="design-system2">
                 <div class="container icons" >
@@ -583,7 +584,7 @@
                     <!--end Project Content 5-->
                 </div>
                 <!--end Project 5-->
-                <div class="related-project">
+                <div class="related-project last-related-project">
                     <!--Open Project 6-->
                     <div class="image white-background">
                         <picture>
