Published jmb.html

--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 						</div>
 					</div><!--end Project Content 2-->
 				</div><!--end Project 2-->
+				
+
 				<div class="project"><!--Open Project 3-->
 					<a href="shore.html">
 					<div class="image white-background">
@@ -133,30 +135,28 @@
 								<p class="label-role">UX/UI Designer</p>
 							</div>
 					</div><!--end Project Content 3-->
-				</div><!--end Project 3-->
-				<div class="project"><!--Open Project 4-->
-					<div class="image white-background">
-							<picture>
-								<source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
-								<img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img round-borders">
-							</picture>
-							<div class="image__overlay image__overlay--blur">
-								<div class="image__title">
-									<h2>Coming Soon</h2>
-								</div>
+				</div>
+
+				<div class="project"><!--Open Project 6-->
+					<div class="white-background">
+						<picture>
+							<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+							<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
+						</picture>
+						<div class="project-content">
+							<div class="project-title">
+								<h3>Responsive portfolio with CSS, HTML & Javascript</h3>
+								<!--<a href="jmb.html"></a>-->
+								<p>Professional portfolio to showcase design and front-end development skills.</p>
 							</div>
+							<div class="project-label">
+								<p class="label-big">2021</p>
+								<p class="label-role">UX/UI Designer, Front-End Developer</p>
+							</div>
+						</div><!--end Project Content 6-->
 					</div>
-					<div class="project-content">
-						<div class="project-title">
-							<h3>Founded and designed social network for creatives</h3><!--<a href="artconnect.html"></a>-->
-							<p>Artconnect is the biggest social network for creatives in Germany, global since 2015.</p>
-						</div>
-						<div class="project-label">
-							<p class="label-big">2011-2020</p>
-							<p class="label-role">Founder, CEO, Product Manager, UX/UI Designer</p>
-						</div>
-					</div><!--end Project Content 4-->
-				</div><!--end Project 4-->
+
+				</div><!--end Project 3-->
 				<div class="project"> <!--Open Project 5-->
 					<div class="image white-background">
 						<picture>
@@ -180,32 +180,31 @@
 							<p class="label-role">Co-founder, UX/UI Designer, Front-End Developer</p>
 						</div>
 					</div><!--end Project Content 5-->
-				</div><!--end Project 5-->
-				<div class="project"><!--Open Project 6-->
+				</div><!--end Project 5-->	
+				<div class="project"><!--Open Project 4-->
 					<div class="image white-background">
-						<picture>
-							<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
-							<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
-						</picture>
-						<div class="image__overlay image__overlay--blur">
-							<div class="image__title">
-								<h2>Coming Soon</h2>
+							<picture>
+								<source srcset="img/home/artconnect_328x246.png" media="(max-width:767px)">
+								<img src="img/home/artconnect_800x600.png" alt="Artconnect" class="image__img round-borders">
+							</picture>
+							<div class="image__overlay image__overlay--blur">
+								<div class="image__title">
+									<h2>Coming Soon</h2>
+								</div>
 							</div>
-						</div>
 					</div>
 					<div class="project-content">
 						<div class="project-title">
-							<h3>Responsive portfolio with CSS, HTML & Javascript</h3>
-							<!--<a href="jmb.html"></a>-->
-							<p>Professional portfolio to showcase design and front-end development skills.</p>
+							<h3>Founded and designed social network for creatives</h3><!--<a href="artconnect.html"></a>-->
+							<p>Artconnect is the biggest social network for creatives in Germany, global since 2015.</p>
 						</div>
 						<div class="project-label">
-							<p class="label-big">2021</p>
-							<p class="label-role">UX/UI Designer, Front-End Developer</p>
+							<p class="label-big">2011-2020</p>
+							<p class="label-role">Founder, CEO, Product Manager, UX/UI Designer</p>
 						</div>
-					</div><!--end Project Content 6-->
-				</div><!--end Project 6-->
-				
+					</div><!--end Project Content 4-->
+				</div><!--end Project 4-->
+
 			</div>
 		</section>
 		<!--end work-->
