--- a/linsenpate.html
+++ b/linsenpate.html
@@ -306,7 +306,7 @@
                     <!-- <div class="typo-container"> -->
                     <h3>Typography</h3>
                     <h3 class="h3-typo">Email Headers</h3>
-                    <section class="scrolling-wrapper" id="scroller"><!--Open Email Headers-->
+                    <section class="scrolling-wrapper"><!--Open Email Headers-->
                         <div class="typo">
                             <h4 class="h4-typo">Email H1 | Desktop</h4>
                             <p class="lp-email-h1-desktop">Karla Bold<br>
@@ -540,6 +540,27 @@
                     <!--end Project Content 3-->
                 </div>
                 <!--end Project 3-->
+
+                 <div class="related-project">
+                    <!--Open Project 6-->
+                    <a href="jmb.html">
+                        <div class="image white-background">
+                            <picture>
+                                <source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+                                <img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio"
+                                    class="image__img round-borders">
+                            </picture>
+                        </div>
+                    </a>    
+                    <div class="related-project-content">
+                        <div class="related-project-title">
+                            <h4><a href="jmb.html">Responsive portfolio with CSS, HTML & Javascript</a></h4>
+                        </div>
+                    </div>
+                    <!--end Project Content 6-->
+                </div>
+                <!--end Project 6-->
+
                 <div class="related-project">
                     <!--Open Project 4-->
                     <div class="image white-background">
@@ -584,29 +605,7 @@
                     <!--end Project Content 5-->
                 </div>
                 <!--end Project 5-->
-                <div class="related-project last-related-project">
-                    <!--Open Project 6-->
-                    <div class="image white-background">
-                        <picture>
-                            <source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
-                            <img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio"
-                                class="image__img round-borders">
-                        </picture>
-                        <div class="image__overlay image__overlay--blur">
-                            <div class="image__title related-image__title">
-                                <h2>Coming Soon</h2>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="related-project-content">
-                        <div class="related-project-title">
-                            <h4>Responsive portfolio with CSS, HTML & Javascript</h4>
-                            <!--<a href="jmb.html"></a>-->
-                        </div>
-                    </div>
-                    <!--end Project Content 6-->
-                </div>
-                <!--end Project 6-->
+    
             </div>
          </section>
         <div id="top-button">
