Added menu on bottom bar

--- a/jmb.html
+++ b/jmb.html
@@ -75,19 +75,18 @@
         <section id="challenge"><!--Open The Challenge-->
                 <div class="container container-challenge"><!--Open Challenge Header-->
                 <h3>The Challenge</h3>
-                <p>How can I help...</p>
                 <div class="table-flex-grid">
                     <ul class="table-item"><!--Open Challenge numbers-->
                         <li class="nr">01</li>
-                        <li><p>Communicate the services to create new and better leads?</p></li>
+                        <li><p>Showcase my work, communicate my personality and facilitate contact.</p></li>
                     </ul>
                     <ul class="table-item">
                         <li class="nr">02</li>
-                        <li><p>Display the values and company culture to attract suited candidates?</p></li>
+                        <li><p>Create a responsive website for all viewposts and browsers with HTML and CSS.</p></li>
                     </ul>
                     <ul class="table-item">
                         <li class="nr">03</li>
-                        <li><p>Transmit trust and value to the provided service?</p></li>
+                        <li><p>Learn enough Javascript to create simle animations and interactions.</p></li>
                     </ul>
                 </div><!--Close Challenge Numbers-->
                 </div><!--End Challenge Header-->
@@ -271,14 +270,14 @@
         </section>
         <!--end of contact-->
     
-        <div class="imprint">
-            <!--Open Imprint-->
-            <h6>©2021 All rights reserved</h6>
-            <a href="imprint.html" target="_blank">
-                <h6>Imprint</h6>
-            </a>
-        </div>
-        <!--End Imprint-->
+		<div class="imprint"><!--Open Imprint-->
+			<h6>©2021</h6> 
+			<h6>All rights reserved</h6>
+			<a href="imprint.html" target="_blank"><h6>Imprint</h6></a>
+			<a href="index.html#about"><h6>About</h6></a>
+			<a href="index.html#work"><h6>Work</h6></a>
+			<a href="index.html#contact"><h6>Contact</h6></a>
+		</div><!--End Imprint-->
     </footer><!--end of footer-->
 
     <!--Scripts-->
