--- a/index.html
+++ b/index.html
@@ -138,22 +138,24 @@
 				</div>
 
 				<div class="project"><!--Open Project 6-->
-					<div class="white-background">
-						<picture>
-							<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
-							<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
-						</picture>
-						<div class="project-content">
-							<div class="project-title">
-								<h3>Responsive portfolio with CSS, HTML & Javascript</h3>
-								<!--<a href="jmb.html"></a>-->
-								<p>Professional portfolio to showcase design and front-end development skills.</p>
-							</div>
-							<div class="project-label">
-								<p class="label-big">2021</p>
-								<p class="label-role">UX/UI Designer, Front-End Developer</p>
-							</div>
-						</div><!--end Project Content 6-->
+					<a href="jmb.html">
+						<div class="white-background">
+							<picture>
+								<source srcset="img/home/jmb_328x246.jpg" media="(max-width:767px)">
+								<img src="img/home/jmb_800x600.jpg" alt="Júlia Marí Bernaus' Portfolio" class="image__img round-borders">
+							</picture>
+					</a>
+					<div class="project-content">
+						<div class="project-title">
+							<h3><a href="jmb.html">Responsive portfolio with CSS, HTML & Javascript</a></h3>
+							<!--<a href="jmb.html"></a>-->
+							<p>Professional portfolio to showcase design and front-end development skills.</p>
+						</div>
+						<div class="project-label">
+							<p class="label-big">2021</p>
+							<p class="label-role">UX/UI Designer, Front-End Developer</p>
+						</div>
+					</div><!--end Project Content 6-->
 					</div>
 
 				</div><!--end Project 3-->
@@ -326,16 +328,15 @@
 		</section>
 		<!--end of contact-->
 	
-		<div class="imprint">
-			<!--Open Imprint-->
-			<h6>©2021 All rights reserved</h6>
-			<a href="imprint.html" target="_blank">
-				<h6>Imprint</h6>
-			</a>
-		</div>
-		<!--End Imprint-->
-	</footer>
-	<!--end of footer-->
+		<div class="imprint"><!--Open Imprint-->
+			<h6>©2021</h6> 
+			<h6>All rights reserved</h6>
+			<a href="imprint.html" target="_blank"><h6>Imprint</h6></a>
+			<a href="index.html#about"><h6>About</h6></a>
+			<a href="index.html#work"><h6>Work</h6></a>
+			<a href="index.html#contact"><h6>Contact</h6></a>
+		</div><!--End Imprint-->
+	</footer><!--end of footer-->
 
 	<!--Scripts-->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
