--- a/setting.html
+++ b/setting.html
@@ -283,7 +283,7 @@
                     <!--end Project Content 6-->
                 </div>
                 <!--end Project 6-->
-                
+
                 <div class="related-project">
                     <!--Open Project 4-->
                     <div class="image white-background">
@@ -350,14 +350,14 @@
         </section>
         <!--end of contact-->
     
-        <div class="imprint">
-            <!--Open Imprint-->
-            <h6>©2021 All rights reserved</h6>
-            <a href="imprint.html" target="_blank">
-                <h6>Imprint</h6>
-            </a>
-        </div>
-        <!--End Imprint-->
+		<div class="imprint"><!--Open Imprint-->
+			<h6>©2021</h6> 
+			<h6>All rights reserved</h6>
+			<a href="imprint.html" target="_blank"><h6>Imprint</h6></a>
+			<a href="index.html#about"><h6>About</h6></a>
+			<a href="index.html#work"><h6>Work</h6></a>
+			<a href="index.html#contact"><h6>Contact</h6></a>
+		</div><!--End Imprint-->
     </footer><!--end of footer-->
 
     <!--Scripts-->
